# AutomaticDifferentiation

./: .gitignore  .travis.yml  LICENSE  README.md  requirements.txt  setup.cfg
notebooks/: demo.ipynb  performance_testing.ipynb
src/auto_diff_harvardgs/: __init__.py  forward_mode.py  naive_forward_mode.py
tests/: .coverage  coverage.xml  run_tests.sh  test_forward_mode.py
