[metadata]
name = auto-diff-harvardgs
version = 0.0.8
author = Harvard Gs CS107 Group
author_email = isheu@g.harvard.edu
description = CS107 Final Project: AutoDiff package implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-gs/cs107-FinalProject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
